Update VOCUS 2022-04-25 patch

--- a/_posts/2018-11-09-VOCUS-明日大嶼人工島1期的發展成本及賣地收益估算.html
+++ b/_posts/2018-11-09-VOCUS-明日大嶼人工島1期的發展成本及賣地收益估算.html
@@ -18,15 +18,20 @@ author: REDBRIC
 <p>換言之，總發展成本為4936億港元 (1400億+ 1190億+ 2346 億元)。</p>
 <p>B. 發展參數</p>
 <p>由於發展局局長提出人工島上以100公頃發展4000萬平方尺商業樓面面積，住宅用地需要相應調整，以騰出空間。假設發展250公頃(25%)為住宅用地，100公頃(10%)為商業用地，合計350公頃 (35%)。假設住宅用地的地積比率為6，商業用地的地積比率為4，總住宅樓面面積為1億5000萬平方尺，總商業樓面面積為4000萬平方尺。(表1,2) </p>
+<img src="https://images.vocus.cc/fe209880-4b42-4ea5-abd2-405ff38815b4.png" alt="表1 明日大嶼人工島1期住宅地發展參數">
 <p>表1 明日大嶼人工島1期住宅地發展參數</p>
+<img src="https://images.vocus.cc/126603d8-e1ce-4283-99ba-85813d6d8eb2.png" alt="表2 明日大嶼人工島1期商業地發展參數">
 <p>表2 明日大嶼人工島1期商業地發展參數</p>
 <p>必須指出，以上的住宅發展密度已比一般新發展區為高，而且可容納家庭數量己計算至上限，估算屬較高賣地收入的參數假設。即使如此，根據施政報告提出公私營房屋比例為7:3比 (以單位數量計)，公私營房屋數量為18萬2000間：7萬8000間。假設公屋平均建築面積500平方尺，公屋總樓面面積9100萬平方尺。剩餘可作私樓樓面面積為5900萬平方尺，平均每伙私樓面積為756平方尺。(表3)</p>
+<img src="https://images.vocus.cc/30b70df0-6d50-4d34-bd32-4b16d13331a5.png" alt="表3 明日大嶼人工島1期的公私營住宅發展參數">
 <p>表3 明日大嶼人工島1期的公私營住宅發展參數</p>
 <p>C. 賣地收入估算</p>
 <p>根據某位測量師的公開估算，島上每尺住宅賣地價可達4000元，住宅地賣地總收入為2360億港元。根據38位經濟學者估算，島上商業用地賣地價為每尺9000元，但根據2030+的估算，至2041年核心商業區的甲級寫字樓只有1141萬平方尺的短缺[2]，若全部1141萬平方尺能以9000元尺價賣出，商業用地的總收入為1027億港元，其餘的商業用地或未能賣出，或引致賣地價格大幅下降。(表4) </p>
+<img src="https://images.vocus.cc/b00a4092-9d52-4d5d-a126-19f1e690c2b6.png" alt="表4 明日大嶼人工島1期商業地賣地收入兩方案比較">
 <p>表4 明日大嶼人工島1期商業地賣地收入兩方案比較</p>
 <p>D. 發展項目盈虧估算</p>
 <p>綜合以上各項，發展總成本為4936億港元，賣地總收入為3387億港元，即項目虧損 -1549億港元 (2018年價格)，仍未計算利息成本。(表5)</p>
+<img src="https://images.vocus.cc/fe1d57e3-789a-4eaa-94e6-15b521b86002.png" alt="表5 明日大嶼人工島1期發展項目盈虧估算">
 <p>表5 明日大嶼人工島1期發展項目盈虧估算</p>
 <p>參考</p>
 <p>[1] 文匯報 (2018) 工程費多年攤分 政府有能力承擔，11月8日。http://paper.wenweipo.com/2018/11/08/HK1811080005.htm</p>
