--- a/_posts/2018-11-14-VOCUS-交椅洲人工島的商業土地規劃滿足到2070年.html
+++ b/_posts/2018-11-14-VOCUS-交椅洲人工島的商業土地規劃滿足到2070年.html
@@ -13,6 +13,7 @@ author: REDBRIC
 <p>2041年或以前的商業樓面面積供需是經過專家顧問利用計量經濟模型推算 [2]，無論是否可靠，起碼有理有據，可供客觀理性討論。如今局長在完全沒有任何科學估算的情況下，更加沒有諮詢過市民，就貿然決定透過填海1000公頃交椅洲人工島來提供比2041年的需求多3倍的商業土地供應，卻完全不能提出任何合理的理據和2041年後的供需估算，請問局長知道市場需要多少年才能吸納這4000萬平方尺的樓面面積嗎？一旦過度供應而導致長期土地閒置所帶來的利息和機會成本的浪費和環境成本將由誰人負責？</p>
 <p>即使根據顧問的基本情景假設下繼續以直線增長推算 (此法非常高估)，即商業核心區甲級寫字樓的新增樓面需求將會以每十年增加約1100萬平方尺 (107萬平方米) 總樓面面積估算，再假設交椅洲人工島可在2024至2033年間起補充所有樓面的供應短缺，而其他核心區的甲級寫字樓樓面不會有任何加減，市場需要差不多57年時間 (至2070年) 才能完全吸納！(表1 2073年欄) </p>
 <p>即使假設只有8成面積是用作甲級寫字樓(局長沒有清楚交待)，人工島可提供的甲級寫字樓的總樓面面積減為3200萬平方尺 (4000萬x0.8)，市場仍需約50年時間 (至2063年) 才能完全吸納！(表1 2063年欄)</p>
+<img src="https://images.vocus.cc/f49de19a-5660-4100-8ed3-ea7c2f8d4ce7.png" alt="表1 香港的商業核心區甲級寫字樓樓面面積供需估算，參考顧問報告的推算假設[2]">
 <p>表1 香港的商業核心區甲級寫字樓樓面面積供需估算，參考顧問報告的推算假設[2]</p>
 <p>事實上，顧問報告有提出「商業核心區與非商業核心區的甲級寫字樓樓面空間，在一定程度上是可以互換的，主要視乎市場租值而定。   商業核心區甲級寫字樓的短缺情況會透過市場力量帶動租值上揚，因而令無力負擔的使用者轉移至非商業核心區的甲級寫字樓。在短期和中期而言，這種情形有助紓緩商業核心區甲級寫字樓的短缺情況。」而非商業核心區的甲級寫字樓估算至2041年會約有1300萬平方尺(126萬平方米)的過剩，面積已超過商業核心區甲級寫字樓的總短缺！透過推動互換政策既可節省填海造地的昂貴成本和避免破壞環境，更可善用資源，減少浪費，把過度填海的支出改作其他更高回報和更能在短期內有利民生的社會投資，造福市民，善用取捨！</p>
 <p>[1] 局長沒有交待這4000萬平方尺商業核心區甲級寫字樓樓面面積是指總樓面面積 (GFA) 還是內部樓面面積 (IFA)，本文假設為總樓面面積。</p>
