--- a/_posts/2018-11-16-VOCUS-從河套區爭議分析沙頭角邊界處理.html
+++ b/_posts/2018-11-16-VOCUS-從河套區爭議分析沙頭角邊界處理.html
@@ -16,15 +16,18 @@ author: REDBRIC
 </ol>
 <p>今日更有傳媒找到土地業權人邱先生 [4]，但他與傳媒在上星期去北區地政處求助，但官員竟告知涉事土地屬於民事霸佔，「不是政府負責，是人對人（的糾紛）」，建議私下解決。這說法明顯與河套區土地爭議的處理辦法不符。</p>
 <p>必須指出，若符合以上兩項條件的土地，該地段屬香港境內的私有產權，理應受到基本法保障，即使兩地政府同意改變邊界，仍必須事先得到土地業權人的同意。</p>
+<img src="https://images.vocus.cc/a961a549-962f-41f0-aaa1-49aa594e28bd.png" alt="圖1 沙頭角私人地段 DD72 LOT185，來源: HKMS2.0 [2]">
 <p>圖1 沙頭角私人地段 DD72 LOT185，來源: HKMS2.0 [2]</p>
-<p><br></p>
+<img src="https://images.vocus.cc/7b665407-6c1c-400e-91c5-2d5b00a798d7.png" alt="圖2 地理資訊地圖 塗白為香港邊界外，來源: 朱凱迪議員FB，從地政總署地理資訊地圖系統製圖">
 <p>圖2 地理資訊地圖 塗白為香港邊界外，來源: 朱凱迪議員FB，從地政總署地理資訊地圖系統製圖</p>
-<p><br></p>
+<img src="https://images.vocus.cc/98c0202a-0cd6-4929-bd87-435d91cd73b9.png" alt="圖3 2010年飛機照片，箭頭指示與DD72 LOT185邊界位置吻合，來源: 朱凱迪議員FB，從地政總署飛行照片製圖">
 <p>圖3 2010年飛機照片，箭頭指示與DD72 LOT185邊界位置吻合，來源: 朱凱迪議員FB，從地政總署飛行照片製圖</p>
 <p>河套發展的爭議可追溯至1997年7月1日國務院令第221號頒布河套地區自此納入香港範圍，當中因拉直河道影響邊界改變的地塊有9幅之多，其中有些地塊規模非常細小，最細一幅只有0.19公頃 (Site B5) 即約2萬尺，但兩地政府依然非常小心認真處理 (圖4)。本來港府考慮在河套設立大學城，但由於兩地政府就土地業權有爭議，相持不下，一拖十年。直至2008年3月，港深決定成立「港深邊界區發展聯合專責小組」就河套發展進行研究，商討賠償私人業權的責任誰負。</p>
+<img src="https://images.vocus.cc/367096ae-0990-4817-ac3f-68acb404705c.png" alt="圖4 河套區爭議的9幅土地，來源：立法會文件CB(1)624/16-17(01)[5]">
 <p>圖4 河套區爭議的9幅土地，來源：立法會文件CB(1)624/16-17(01)[5]</p>
 <p>至2011年11月，雙方簽署《推進落馬洲河套地區共同開發工作的合作協議書》，但雙方就土地業權仍有分歧，須要繼續商討。再經過五年多的談判，至2017年1月雙方正式達成全面協議，簽署《關於港深推進落馬洲河套地區共同發展的合作備忘錄》，其中有關土地業權賠償問題，雙方同意過去的收地賠償金額不作計算，另外，日後將各自負責承擔和解決任何有關「過境」土地未被納入對方行政區域範圍之前的土地權益問題或申索要求。</p>
 <p>至此大家可以清楚見到簡單如河套區小小九幅合共約一百公頃的土地，即使有國務院令規定權益誰屬，但賠償私人業權和開發的談判需時長達20年，兩地政府一定明白邊界爭議的複雜性和爭議性。事實上，沙頭角邊界的土地爭議出現的時間比河套區的土地爭議為遲，雙方就國務院令所引起的邊界爭議的跟進辦法早已有多年經驗，地政總署署長及職員在這20年間就邊界事宜必然是高度關注及不停在準備詳細的資料和地圖，準備與深圳政府開會之用及交給立法會 (如圖3)，署方正正在這段時間購置了一套先進的航拍系統[CB(1)1648/10-11(01)]，當時的照片已經見到香港的邊界改變及境內的樹林被破壞的跡象 (圖5灰色位置)，塗白邊界更不大可能是手民之誤，因為邊界是以GPS定位，理應非常準確。</p>
+<img src="https://images.vocus.cc/c0a2cbec-dfe2-45aa-b264-56851508a642.png" alt="圖5 2017年6月9日以1900尺低飛的航空照片，比對2010年的照片DD72 LOT185的香港境內地段已塗白，即剔出香港範圍，來源: 朱凱迪議員FB，從地政總署飛行照片製圖">
 <p>圖5 2017年6月9日以1900尺低飛的航空照片，比對2010年的照片DD72 LOT185的香港境內地段已塗白，即剔出香港範圍，來源: 朱凱迪議員FB，從地政總署飛行照片製圖</p>
 <p>總而言之，深圳市政府和香港政府不太可能不知道沙頭角邊界的環境改變，而香港政府必定知道該地段屬私人業權，即使想剔出香港範圍，亦必須先與業權人商討賠償，或行使《收回土地條例》，為「公眾目的」強制收回土地，情況與河套區的土地爭議如出一轍，只不過今次的私人業權位於香港境內而非深圳，但原則上處理辦法理應一視同仁，亦為日後的邊界糾紛確立處理原則。</p>
 <p>參考</p>
