--- a/_posts/2018-11-19-VOCUS-如何解決私人發展公共空間-pops的矛盾.html
+++ b/_posts/2018-11-19-VOCUS-如何解決私人發展公共空間-pops的矛盾.html
@@ -9,8 +9,7 @@ author: REDBRIC
 ---
 
 <p>上星期六(2018年11月17日)我應邀出席拓展公共空間舉辦的第三屆香港公共空間研討會POPS-here & after，首先拓展公共空間研究團隊在 2018 年6至9月期間進行審計，以暢達性、環境與設施公眾使用及鼓勵社交4方面評核了 93 個 POPS 。</p>
-<p><br></p>
-<p><br></p>
+<img src="https://images.vocus.cc/0ad85461-9328-43ae-abcd-37a61ebb759d">
 <p>他們發現 POPS 普遍有以下問題 ︰</p>
 <p>(1) 設計和管理未以用家為重，造成公共空間資源浪費； </p>
 <p>(2) 現時的 POPS 指引未能有效地確保休憩空間的質素。尤其對 POPS 選址及 管理方面沒有規範；選址及；</p>
@@ -33,4 +32,3 @@ author: REDBRIC
 <p>誠然，業主也應可以向政府回購POPS，以成為私人空間，但相信價格會非常高昂 (差不多等於重新賣地)，而且要得到市民同意，經過法定程序，並不容易。</p>
 <p>如果有POPS不適宜回購，我建議成立法定獨立公共空間委員會，由公眾選舉產生委員，委員會可委託符合理念的NGO管理公共空間，既可避免政府康文署式的過度管理、亦可防止私營管理公共空間時經常以商業謀利手法。與會的鄭教授補充提議，可由社區建築師和規劃師與NGO參與公共空間的設計，而且可為整區先制定公共空間的總綱規劃，為各處公共空間的連接性和暢達性做好城市設計。</p>
 <p>[1] 拓展公共空間 (2018) 私人發展公共空間審計報告。http://www.hkpsi.org/chi/projects/pops-audit/</p>
-<p><br></p>
