--- a/_posts/2018-11-20-VOCUS-公民廣場是不開放gops的例子.html
+++ b/_posts/2018-11-20-VOCUS-公民廣場是不開放gops的例子.html
@@ -10,9 +10,7 @@ author: REDBRIC
 
 <p>上星期六我在一研討會上提出政府有官地不開放作公共空間 GOPS，卻硬要私人在住宅屋邨內提供公共空間 POPS，為業主與使用者帶來不必要的矛盾和衝突，所以建議政府先在政府設施用地內提供公共空間，盡量減少在私人住宅用地內強制提供公共空間。[1]</p>
 <p>言猶在耳，昨日高等法院頒下判令，判行政署在2014年，為俗稱「公民廣場」的政總東翼前地加裝圍欄，限制市民集會及表達自由的措施為不合法及違憲。[2] 建築師在設計時明顯把公民廣場設定為公共空間，事實上，在2014年前公民廣場一直向公眾開放。</p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
+<img src="https://images.vocus.cc/1f8f4c66-884a-4ca2-815f-98d3f5901a7c">
 <p>當然，政府利用法律用語來否認公民廣場屬公共空間，因為在香港規劃法例根本沒有公共空間這一用語，公民廣場亦根本不存在於政府的法定文件。根據拓展公共空間組織的分析，該政府總部東翼前地的用地規劃為「政府、機構或社區」(GIC)用地，而「政府、機構或社區」用地的開放程度並無劃一準則，亦無法律規定。[3] 證明我在研討會上所指政府並沒有先開放政府設施用地作公共空間 GOPS，反而利用地契條款強制私人地段業主把私人土地開放作公共空間POPS，把政府的責任轉移給私人，引致很多不必要的爭議。</p>
 <p>相反，當市民進入一處原為公共空間的官地，因為政府下令護衛阻止市民進入該公共空間，引起衝突，最終導致市民被判監禁。可見當業權人與使用者的利益矛盾，而雙方亦欠缺合約關係，令衝突無法解決。把私人土地強制開放作公眾地方，或把公共空間強制阻止市民進入，都是政府人為地製造空間使用矛盾，故意挑起衝突。</p>
 <p>事實上，在今次公民廣場案中，判詞指行政署限制市民進入公民廣場的措施，並不符合比例。法官認為，行政署長未能證明，施加的限制有其必要性，認為署方措施是不合比例地限制市民表達自由。</p>
