--- a/_posts/2019-05-25-VOCUS-為何美國政府建議檢討香港單獨關稅區地位.html
+++ b/_posts/2019-05-25-VOCUS-為何美國政府建議檢討香港單獨關稅區地位.html
@@ -11,9 +11,7 @@ author: REDBRIC
 <p>2018年11月14日美中經濟與安全審查委員會發佈年度報告，其中第三章第四節特闢香港章節建議美國商務部摘寫報告，檢討現時民用和軍用的高科技輸港貿易，探討因為現時美國把香港和中國內地視為不同關稅區域所帶來對美國出口管制是否足夠的問題；第二項建議與英國、歐盟和台灣成立的跨議會組織進行檢討中國是否履行基本法並制定報告，其中特別需要關注法治、言論自由及集會自由和新聞自由。這兩項建議的原文如下：[1]</p>
 <p>“The Commission recommends: Congress direct the U.S. Department of Commerce and other relevant government agencies to prepare an unclassified public report, with a classified annex, examining and assessing the adequacy of U.S. export control policy for dual-use technology as it relates to U.S. treatment of Hong Kong and China as separate customs areas.</p>
 <p>Congressional interparliamentary groups engage parliamentarians from the United Kingdom, EU, and Taiwan in a biennial review of China’s adherence to the Basic Law, with specific attention to rule of law, freedom of speech and assembly, and press freedom, and issue a report based on its findings after each review.”[1]</p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
+<img src="https://images.vocus.cc/8177b53f-ca3b-45d4-89f1-d975d0641575.png">
 <p>報告中關於香港的其他內容可參考[2]。可惜大多分析把這份報告獨立理解，而忽略了幾個月前美國就美港政策法的年度報告中有關敏感軍事產品管制的憂慮。因此，若要理解以上的建議，必先了解《美國-香港政策法》有關美國出口香港的管制政策，其中第5713(8)條有關美港商貿政策中聲明美國繼續支持出口香港受COCOM協議管制出口的敏感技術：</p>
 <p>“5713 Commerce between US and HK</p>
 <p>(8) The US should continue to support access by HK to sensitive technologies controlled under the agreement of the Coordinating Committee for Multilateral Export Controls (commonly referred to as “COCOM”) for so long as the US is satisfied that such technologies are protected from improper use or export.”[3]</p>
@@ -32,4 +30,3 @@ author: REDBRIC
 <p>[4] 工業貿易署 (2009) 戰略貿易管制通告第3/2009號，https://www.stc.tid.gov.hk/tc_chi/circular_pub/2009_stc03.html：從事美國來源戰略物品進出口的商號須注意要項 –根據美國出口管制規例，中國內地和香港被視為不同的目的地。在某些情況下，美國對輸往香港的貨物實施簽證豁免，但對再轉口輸往中國內地的相同貨物，卻要求商號持有美國個別出口簽證。在另一些情況下，獲美國批准以個別出口簽證輸往香港的貨物，並不准許轉口往中國內地。即使貨物是供香港公司在內地的附屬公司∕業務∕相聯公司使用，此限制亦同樣適用。</p>
 <p>[5] 工業貿易署 (2002) 香港對屬美國來源的數碼電腦所實施的簽證規定，https://www.stc.tid.gov.hk/tc_chi/circular_pub/files/nc025bx-c.pdf</p>
 <p>[6] USDS (2018) Hong Kong Policy Act Report 2018, US Department of State, May 29, 2018. https://www.state.gov/p/eap/rls/reports/2018/282787.htm</p>
-<p><br></p>
