--- a/_posts/2022-04-24-VOCUS-在此-在彼-旅行的辯證.html
+++ b/_posts/2022-04-24-VOCUS-在此-在彼-旅行的辯證.html
@@ -17,6 +17,5 @@ author: 老蔡書評
 <div class="draft-block draft--p left">除此之外，那些他人經驗對於自身的影響，又可分為親身體驗及聽人傳述。而這二種在旅行的經驗中，又可再細分為神遊以及親歷。心嚮往之，以及距離產生的美感，都和真實的生活經驗有別，而這些仔細分析討論，恐怕都有許多需要納入的本體論和價值論衝突，需要不斷的辯證、釐清。</div>
 <div class="draft-block draft--p left">小書頁數不多，除了一些誤植之外，結構性的理解旅行，並且提供一個新的框架，有助於對於旅行、旅者乃至於旅行經驗與生活的交流。外國的月亮是否就比較圓，以及對於經驗中事物的偏好是否與不熟悉的事物有別，都值得交流不同意見。</div>
 <div class="draft-block draft--p left">附上隨便做心智圖，整理一下書中的重要概念。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1356px" class="image-block-prerender" data-src="https://images.vocus.cc/f076891b-b559-4368-a6c8-5538b060d60e.png" data-width="1356" data-height="725" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/f076891b-b559-4368-a6c8-5538b060d60e.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">推薦給喜歡旅行以及不喜歡旅行的朋友，你總是需要一個好的理解框架，來梳理種種的經驗。而在此之後，個人的改變也得透過這不斷的檢證，才能夠有比較明晰的暫時性結論。</div>
