--- a/_posts/2018-11-09-VOCUS-一直營運虧蝕的香港機場快線.html
+++ b/_posts/2018-11-09-VOCUS-一直營運虧蝕的香港機場快線.html
@@ -13,12 +13,14 @@ author: REDBRIC
 <p>「機鐵項目在財政上自給自足，無須由現有地鐵系統補貼。其基本財務計劃包括在40年的經營期內取得10%的內部回報率、地鐵公司就機鐵借貸的款額不得超過114億元、在 2005年或之前悉數償還機鐵項目的債項，以及由1997年起向政府派發股息。」[2]</p>
 <p>可惜，事與願違，機鐵「自1998年通車以來一直錄得虧損。直至2015年，隨着乘客量上升至現時水平，機場快綫才達至收支平衡，但當中未計利息和稅項開支，若計及相關因素後，仍錄得虧蝕。」 [3] </p>
 <p>2012-2016年的營運收支(未計利息及稅項)如下(圖1)：</p>
+<img src="https://images.vocus.cc/1473ae8f-2798-420a-a50b-a80f52ac314d.png" alt="圖1 機鐵營運收支，2012-2016 [1]  註：由於港鐵文件沒有披露有關利息和稅款詳情，只明言一直虧損。而集團2013年損益表上的淨利息開支為7.32億元。">
 <p>圖1 機鐵營運收支，2012-2016 [1]  註：由於港鐵文件沒有披露有關利息和稅款詳情，只明言一直虧損。而集團2013年損益表上的淨利息開支為7.32億元。</p>
 <p>由於機場快綫的營運成本和折舊基數相當高，而營運成本的上升速度與收入增速相近，譬如由2001年至2016年期間的營運成本上升了25%，2001年的總收入有630百萬元，營運開支為520百萬元，折舊為580百萬元，虧損470百萬元。至2016年，營運收入上升25.8%至1170百萬元，開支亦上升25%至650百萬元，折舊為480百萬元，帳面盈利40百萬元，但扣除利息仍然虧損。</p>
 <p>一絛機鐵的營運成本可以高達每年6億5千萬元，折舊4億8千萬元，合計11億3千萬元，實在驚人，而且這些開支有增無減，一旦遊客人數下跌，機鐵乘客人數減少，收入馬上入不敷支。</p>
 <p>交通基建，即使把投資金額視為社會整體長期投資，旨在社會效益回報，不計回本；但營運收支必須轉虧為盈，否則市民須要長期補貼，或港鐵變成債台高築，不但未能為社會帶來效益，反而對社會穩定構成威脅。</p>
 <p>事實上，我在去年立法會的財政預算案修正案發言時已經指出[4]，傳統凱恩斯經濟學提出有關政府工程開支可以帶動經濟的假想已經被多份研究推翻，譬如 Mitchell, D.J. (2005) The Impact of Government Spending on Economic Growth, The Heritage Foundation, 說明政府工程的經濟效益遠低於私人工程的經濟效益。其實政府自己都承認政府的低效益，好似去年在工務小組討論啟德體育園區要採用DBO的採購形式，政府解釋是因為政府經營會比財團經營少賺幾十億元。 而另一份近期的研究 Thabane, K. and Lebina, S. (2016) Economic Growth and Government Spending Nexus: Empirical Evidence from Lesotho，有別於過去研究主要集中研究短期成效，研究團隊利用ARDL模型，研究政府工程開支對經濟的長期效果，結果不能支持有關命題。</p>
 <p>關於政府過度開展工程的惡果，其實大家耳熟能詳，只要參考中國近年的產能過剩情況，建築業更加出現「鬼城」（即大量樓宇落成後賣不出）的現象。而香港政府近年用在基建的支出持續大幅上升 (圖2)，由1998-1999年度的200多億元上升至2016-2017年度的900多億元，政府預計開支持續上升至每年1200億元，基本工程儲備基金的開支已經成為政府開支之中最高比例的項目之一。</p>
+<img src="https://images.vocus.cc/804b5cce-aa8f-4c10-b338-03fcbf4479a1.png" alt="圖2 香港基建支出 [5]">
 <p>圖2 香港基建支出 [5]</p>
 <p>根據經濟學的邊際效用遞減定律，基建開支不可能無限上升仍然有相同的財務和經濟效益。再者，隨着全球暖化逼在眉睫，惡劣天氣殺到埋身，凱恩斯式的大興土木，毁山滅海已經不合時宜。</p>
 <p>參考：</p>
@@ -26,6 +28,4 @@ author: REDBRIC
 <p>[2] 臨時立法會 (1998) CB(1)1327號文件，CB1/PL/TP/1，3月13日。</p>
 <p>[3] 東方日報 (2017) 營運成本高 機場快綫虧蝕19年，5月5日。http://orientaldaily.on.cc/cnt/news/20170505/mobile/odn-20170505-0505_00176_035.html </p>
 <p>[4] 姚松炎 (2017) 財政預算案第五節就修正案總結發言，5月11日。https://ecyyiu.wordpress.com/?s=%E5%87%B1%E6%81%A9%E6%96%AF </p>
-<p>[5] 龍子維、鄒崇銘 (2018) 拆解明日大嶼「基建大鯨魚」，10月15日。http://www1.hkej.com/dailynews/commentary/article/1966695/%E6%8B%86%E8%A7%A3%E6%98%8E%E6%97%A5%E5%A4%A7%E5%B6%BC%E3%80%8C%E5%9F%BA%E5%BB%BA%E5%A4%A7%E9%AF%A8%E9%AD%9A%E3%80%8D<br>
-</p>
-<p><br></p>
+<p>[5] 龍子維、鄒崇銘 (2018) 拆解明日大嶼「基建大鯨魚」，10月15日。http://www1.hkej.com/dailynews/commentary/article/1966695/%E6%8B%86%E8%A7%A3%E6%98%8E%E6%97%A5%E5%A4%A7%E5%B6%BC%E3%80%8C%E5%9F%BA%E5%BB%BA%E5%A4%A7%E9%AF%A8%E9%AD%9A%E3%80%8D</p>
