--- a/_posts/2018-11-12-VOCUS-二手樓成交量下跌一半.html
+++ b/_posts/2018-11-12-VOCUS-二手樓成交量下跌一半.html
@@ -10,8 +10,10 @@ author: REDBRIC
 
 <p>上星期提到住宅按揭貸款申請急跌[1]，背後的原因應與買賣兩閒有關，初步的證據可以參考剛公布的住宅二手樓成交量下跌情況。</p>
 <p>首先，圖1顯示過去三年的二手樓成交量的年度變化率，最近三個月的成交量無論是月度或年度計算都出現負數變化率，而且均低於三年平均數。8、9、10月的成交量分別為3332、2248、1906宗，一個月比上一個月低；10月份成交量的年度變化為-49%，下跌接近一半！這三個月的月度變化為-23%、-33%、-15%，持續負數。</p>
+<img src="https://images.vocus.cc/82cab578-d602-4178-9cab-9eb97f36be0e.png" alt="圖1 香港住宅二手樓成交量 (左軸) 及年度變化率 (%，右軸)，來源：田土廳">
 <p>圖1 香港住宅二手樓成交量 (左軸) 及年度變化率 (%，右軸)，來源：田土廳</p>
 <p>相反，一手樓的10月份成交量不但沒有下跌，反而多過二手成交量。當然，一手樓花銷售既受到賣地和建築速度影響，也受到政府的批售樓花申請的程序影響，更受到市況和銷售策略影響，每月的成交量一直都非常波動。然而，由於二手樓的存貨量比一手樓的供應量多出幾千倍，所以一手樓成交量一般都低於二手樓成交量，但近年由於政府實施多項辣招印花稅，令成交從二手市場轉到一手市場，但比例一般仍然低於60%，事實上，過去17年只有3次出現這比例高於100%，而今年10月份的一手與二手成交比例打破紀錄，達到123%！(圖2)</p>
+<img src="https://images.vocus.cc/bf666b71-fa3e-414b-89fe-b9703d8b7a5d.png" alt="圖2 香港住宅一手佔二手成交量比例，來源：田土廳">
 <p>圖2 香港住宅一手佔二手成交量比例，來源：田土廳</p>
 <p>國際上有多份研究發現住宅市場的成文量與成交價有正相關現象[2] (另文再分析香港情況)，而成交量的資訊比成交價公開得比較快，資訊滯後時間較短，一般田土廳在月初已經公布上月的成交量，但成交價滯後差不多兩個月；因此，成交量經常可以用作領先指標。</p>
 <p>參考</p>
