--- a/_posts/2022-04-24-PQ-馬克宏連任成功-歐洲領袖鬆了好大一口氣.html
+++ b/_posts/2022-04-24-PQ-馬克宏連任成功-歐洲領袖鬆了好大一口氣.html
@@ -8,15 +8,15 @@ tags: blog
 author: 林藤
 ---
 
-<p>法國時間 2022 年 4 月 24 日晚間 8 時許，隨著極右派候選人雷朋（Marine Le Pen）與極左派候選人梅蘭雄（Jean-Luc Melenchon）發表敗選感言，現任總統馬克宏（Emmanuel Macron）以 58.55% 的得票率，確定連任成功。現年 44 歲的馬克宏也成為近 20 年來首度連任成功的法國總統，顯示法國進入 21 世紀之後在歐洲及國內所面臨的嚴峻挑戰。</p>
+<p>法國時間 2022 年 4 月 24 日晚間 8 時許，隨著極右派候選人雷朋（Marine Le Pen）與極左派候選人梅蘭雄（Jean-Luc Melenchon）發表敗選感言，現任總統馬克宏（Emmanuel Macron）最終以 58.54% 的得票率，確定連任成功。現年 44 歲的馬克宏也成為近 20 年來首度連任成功的法國總統，顯示法國進入 21 世紀之後在歐洲及國內所面臨的嚴峻挑戰。</p>
 
 
 
-<p class="pqnote">在本次法國總統大選中，馬克宏在投票率高達 73.69% 的第一輪投票中陷入苦戰，前三名參選人的得票率相當，馬克宏僅以些微差距勝出。但在第二輪投票中，馬克宏拿下過半數的選票，終於從苦戰中拿下勝利。值得注意的是，根據易普索集團（Ipsos）所公布的數據，第二輪投票的棄權比例上升到 28.2%，比第一輪投票的棄權比例高出 1.9%，也比 2017 年第二輪投票高出 2.7%。</p>
+<p class="pqnote">在本次法國總統大選中，馬克宏在投票率高達 73.69% 的第一輪投票中陷入苦戰，前三名參選人的得票率相當，馬克宏僅以些微差距勝出。但在第二輪投票中，馬克宏拿下過半數的選票，終於從苦戰中拿下勝利。值得注意的是，根據易普索集團（Ipsos）所公布的數據，第二輪投票的棄權比例上升到 28.01%，比第一輪投票的棄權比例高出 1.9%，也比 2017 年第二輪投票高出 2.7%。</p>
 
 
 
-<figure class="wp-block-table is-style-stripes"><table><thead><tr><th class="has-text-align-center" data-align="center">候選人</th><th class="has-text-align-center" data-align="center">代表政黨</th><th class="has-text-align-center" data-align="center">第一輪得票率<br>2022年4月10日</th><th class="has-text-align-center" data-align="center">第二輪得票率<br>2022年4月24日</th></tr></thead><tbody><tr><td class="has-text-align-center" data-align="center">馬克宏<br>（Emmanuel Macron）</td><td class="has-text-align-center" data-align="center">共和前進黨<br>La République En Marche! （LREM）</td><td class="has-text-align-center" data-align="center">27.85%</td><td class="has-text-align-center" data-align="center">58.55%</td></tr><tr><td class="has-text-align-center" data-align="center">雷朋<br>（Marine Le Pen）</td><td class="has-text-align-center" data-align="center">國民聯盟<br>National Rally（RN）</td><td class="has-text-align-center" data-align="center">23.15%</td><td class="has-text-align-center" data-align="center">41.45%</td></tr><tr><td class="has-text-align-center" data-align="center">梅蘭雄<br>（Jean-Luc Melenchon）</td><td class="has-text-align-center" data-align="center">不屈法國黨<br>La France Insoumise（LFI）</td><td class="has-text-align-center" data-align="center">21.95%</td><td class="has-text-align-center" data-align="center">&#8212;</td></tr></tbody></table><figcaption>備註：截稿前法國官方尚未公布第二輪最終投票數據，表格中先以法國媒體報導的資料為主，報呱會持續更新最終數據。</figcaption></figure>
+<figure class="wp-block-table is-style-stripes"><table><thead><tr><th class="has-text-align-center" data-align="center">候選人</th><th class="has-text-align-center" data-align="center">代表政黨</th><th class="has-text-align-center" data-align="center">第一輪得票率<br>2022年4月10日</th><th class="has-text-align-center" data-align="center">第二輪得票率<br>2022年4月24日</th></tr></thead><tbody><tr><td class="has-text-align-center" data-align="center">馬克宏<br>（Emmanuel Macron）</td><td class="has-text-align-center" data-align="center">共和前進黨<br>La République En Marche! （LREM）</td><td class="has-text-align-center" data-align="center">27.85%</td><td class="has-text-align-center" data-align="center">58.54%</td></tr><tr><td class="has-text-align-center" data-align="center">雷朋<br>（Marine Le Pen）</td><td class="has-text-align-center" data-align="center">國民聯盟<br>National Rally（RN）</td><td class="has-text-align-center" data-align="center">23.15%</td><td class="has-text-align-center" data-align="center">41.46%</td></tr><tr><td class="has-text-align-center" data-align="center">梅蘭雄<br>（Jean-Luc Melenchon）</td><td class="has-text-align-center" data-align="center">不屈法國黨<br>La France Insoumise（LFI）</td><td class="has-text-align-center" data-align="center">21.95%</td><td class="has-text-align-center" data-align="center">&#8212;</td></tr></tbody></table></figure>
 
 
 
@@ -24,11 +24,11 @@ author: 林藤
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/036f8c93-pxl_20220424_181615755-1024x576.jpg" alt="" class="wp-image-99132" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/036f8c93-pxl_20220424_181615755-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/036f8c93-pxl_20220424_181615755-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/036f8c93-pxl_20220424_181615755-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/036f8c93-pxl_20220424_181615755.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>極右派候選人雷朋（Marine Le Pen）雖然落敗但仍有不錯的斬獲，將放眼六月登場的國會選舉。<br>翻攝自France24</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/036f8c93-pxl_20220424_181615755-1024x576.jpg" alt="" class="wp-image-99132" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/036f8c93-pxl_20220424_181615755-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/036f8c93-pxl_20220424_181615755-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/036f8c93-pxl_20220424_181615755-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/036f8c93-pxl_20220424_181615755.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>極右派候選人雷朋（Marine Le Pen）雖然落敗但仍有不錯的斬獲，將放眼六月登場的國會選舉。<br>圖／翻攝自France24</figcaption></figure>
 
 
 
-<p>率先發表落選感言的雷朋，在上屆選戰（2017 年）中僅獲得 33.9% 的得票率，而本屆選舉除了在選前聲勢大漲外，更在第一輪投票中以少數差距緊追馬克宏，而最終更拿到 41.8% 的選票，大幅超越 5 年前的成績。因此，儘管是發表「敗選感言」，雷朋仍以強勢的話語呼喚支持者，再接再厲於下個月即將登場的國會選舉中拿下更多席次。</p>
+<p>率先發表落選感言的雷朋，在上屆選戰（2017 年）中僅獲得 33.9% 的得票率，而本屆選舉除了在選前聲勢大漲外，更在第一輪投票中以少數差距緊追馬克宏，而最終更拿到 41.46% 的選票，大幅超越 5 年前的成績。因此，儘管是發表「敗選感言」，雷朋仍以強勢的話語呼喚支持者，再接再厲於下個月即將登場的國會選舉中拿下更多席次。</p>
 
 
 
@@ -36,11 +36,15 @@ author: 林藤
 
 
 
+<p>雷朋在本屆選戰中主打通膨、民生經濟牌，並大大軟化極右派立場給選民無法信任的立場。雷朋也成為史上得票率最高的極右派候選人，在政治面上預計將持續帶給執政黨和馬克宏不小的壓力。</p>
+
+
+
 <h2>極左派梅蘭雄：選民投給我！讓我擔任總理！</h2>
 
 
 
-<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/91fffbc1-pxl_20220424_182545703-1024x576.jpg" alt="" class="wp-image-99133" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/91fffbc1-pxl_20220424_182545703-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/91fffbc1-pxl_20220424_182545703-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/91fffbc1-pxl_20220424_182545703-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/91fffbc1-pxl_20220424_182545703.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>極左派候選人梅蘭雄（Jean-Luc Melenchon）<br>翻攝自France24</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/91fffbc1-pxl_20220424_182545703-1024x576.jpg" alt="" class="wp-image-99133" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/91fffbc1-pxl_20220424_182545703-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/91fffbc1-pxl_20220424_182545703-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/91fffbc1-pxl_20220424_182545703-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/91fffbc1-pxl_20220424_182545703.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>極左派候選人梅蘭雄（Jean-Luc Melenchon）<br>圖／翻攝自France24</figcaption></figure>
 
 
 
@@ -56,7 +60,7 @@ author: 林藤
 
 
 
-<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/899e43b7-pxl_20220424_193535366-1024x576.jpg" alt="" class="wp-image-99131" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/899e43b7-pxl_20220424_193535366-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/899e43b7-pxl_20220424_193535366-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/899e43b7-pxl_20220424_193535366-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/899e43b7-pxl_20220424_193535366.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>4月24日晚間9點半左右，確定連任成功的馬克宏在支持者的促擁、以及歐盟盟歌《快樂頌》（Ode to Joy）的音樂中，與妻子碧姬（Brigitte Macron）牽手步入巴黎艾菲爾鐵塔（Eiffel Tower）旁的競選總部，現場已湧入數十萬名支持者。<br>翻攝自France24</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/899e43b7-pxl_20220424_193535366-1024x576.jpg" alt="" class="wp-image-99131" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/899e43b7-pxl_20220424_193535366-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/899e43b7-pxl_20220424_193535366-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/899e43b7-pxl_20220424_193535366-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/899e43b7-pxl_20220424_193535366.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>4月24日晚間9點半左右，確定連任成功的馬克宏在支持者的促擁、以及歐盟盟歌《快樂頌》（Ode to Joy）的音樂中，與妻子碧姬（Brigitte Macron）牽手步入巴黎艾菲爾鐵塔（Eiffel Tower）旁的競選總部，現場已湧入數十萬名支持者。<br>圖／翻攝自France24</figcaption></figure>
 
 
 
@@ -72,7 +76,7 @@ author: 林藤
 
 
 
-<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/0eef66bb-pxl_20220424_195257735-1024x576.jpg" alt="" class="wp-image-99134" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/0eef66bb-pxl_20220424_195257735-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/0eef66bb-pxl_20220424_195257735-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/0eef66bb-pxl_20220424_195257735-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/0eef66bb-pxl_20220424_195257735.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>馬克宏在發表完勝選感言後，安排聲樂家演唱法國國歌，現場數十萬支持者圍繞，氣氛歡欣鼓舞。<br>翻攝自France24</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/0eef66bb-pxl_20220424_195257735-1024x576.jpg" alt="" class="wp-image-99134" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/0eef66bb-pxl_20220424_195257735-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/0eef66bb-pxl_20220424_195257735-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/0eef66bb-pxl_20220424_195257735-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/0eef66bb-pxl_20220424_195257735.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>馬克宏在發表完勝選感言後，安排聲樂家演唱法國國歌，現場數十萬支持者圍繞，氣氛歡欣鼓舞。<br>圖／翻攝自France24</figcaption></figure>
 
 
 
