Update VOCUS 2022-04-26 patch

--- a/_posts/2018-10-10-VOCUS-香港施政報告2018開展全方位公私合營計劃.html
+++ b/_posts/2018-10-10-VOCUS-香港施政報告2018開展全方位公私合營計劃.html
@@ -10,9 +10,7 @@ author: REDBRIC
 
 <p>今日特首宣讀施政報告，其中土地房屋篇的篇幅最長，亦最受矚目。然而，土地大辯論仍未有諮詢結果，林鄭已經急不及待要顯示其好打得的本色，提出重大土地房屋政策大改變，變相承認土地大辯論是假諮詢。其中最重大的政策方向改變應該是全方位推出公私合營發展資助出售房屋計劃！這與去年林鄭提出的現有80萬公營出租房屋封頂論一脈相承，全面鼓勵置業及公私合營方式把興建公營房屋的責任交給發展商和業主。</p>
 <p>林鄭在施政報告中一口氣推出五項公私合營計劃，合作伙伴雖然各有不同，性質卻都一樣係減免發展商的地價來換取資助房屋或加快重建。所以今次施政報告可視為宣佈香港房屋政策進入全面公私合營的新時代!</p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
+<img src="https://images.vocus.cc/7999167c-caf5-4dac-b902-d9ae90d317ed.jpg">
 <p> 該五項公私合營項目分別為：</p>
 <p>1. 政府與農地業主公私合營：</p>
 <p>林鄭在土地大辯論還未公布諮詢結果前就急急宣布落實公私合營發展農地，內容非常含糊，只以「土地共享先導計劃」為名，把農地描述為「那些不在政府發展規劃的私人擁有土地」，以在短中期滿足公營和私營房屋的需求。然而，所謂「共享」，又是興建資助出售房屋，報告的用詞如下：「新增住宅樓面面積，當中不少於6至7成須用作興建以資助出售房屋為主的公營房屋。」</p>
