--- a/_posts/2019-05-22-VOCUS-美中貿易戰與人民幣匯率.html
+++ b/_posts/2019-05-22-VOCUS-美中貿易戰與人民幣匯率.html
@@ -10,18 +10,17 @@ author: REDBRIC
 
 <p>十分鐘短片：https://www.youtube.com/watch?v=pc74f773Q6Y&t=19s</p>
 <p>傳統經濟理論認為，當兩國之間出現貿易差額，會透過匯率調節解決。譬如過去30年，美中貿易長期出現貿易差額，而且逐年擴大，2017年的美中貿易差額達到3,752億美元 (圖1)，而過去30年的美中貿易差額有逐年擴大趨勢 (圖2)；雖然計算細節有爭議，但整體而言，美國人購買中國貨比中國人買美國貨為多應是不爭事實，那麼到底為什麼人民幣沒有如教科書理論所預測一樣出現上升情況？</p>
+<img src="https://images.vocus.cc/91db2130-3cc7-42dc-af80-e6db87893ecb.jpg" alt="圖1 美中貿易差額2017">
 <p>圖1 美中貿易差額2017</p>
-<p><br></p>
+<img src="https://images.vocus.cc/4117b3f1-a9f0-4f5a-af7d-1f507408c86e.jpg" alt="圖2 美中貿易差額1985-2016，來源：US Census Bureau">
 <p>圖2 美中貿易差額1985-2016，來源：US Census Bureau</p>
 <p>中國雖然從貿易中獲取大量美元外匯，但中國把大量美元反借給美國聯儲局，形成一種有趣的正回饋系統。當美國長期大量消費外國貨，而美國貨又沒有這麼多外國人買，理論上美國人應該會無錢再花，怎可能30年長期逆差擴大？以金本位為例 (假設全球貿易以黃金交易)，即使最初美國擁有所有黃金，30年的逆差下來，一旦美國把黃金花光，就再無消費外國貨的財力，除非外國人肯借黃金給美國人繼續花！</p>
 <p>關鍵就在外國人肯借！而且不單只其他國家肯借，中國更成為借最多美元給美國的國家，連續多年第一。圖3 顯示中國在2018年1月時持有美國國庫債券金額達11,682億美元，佔總額超過六份一，成為全球第一名。而且年度升幅驚人，由2000年的714億，急升至2011年高位的13,149億，12年間上升16倍！</p>
-<p><br></p>
+<img src="https://images.vocus.cc/ece6179d-a8f4-4f42-ba41-b3cafc4cfd0d.png" alt="圖3 中國持有最多美國國債，來源: AFP">
 <p>圖3 中國持有最多美國國債，來源: AFP</p>
 <p>即使如此，人民幣理應有巨大的升值壓力，加上2008年國際金融風暴之後，美國進行量化寬鬆，美元急跌，此消彼長，匯率調節令中國貨對美國人而言變貴，自然減少購買，便可減少貿易差額，為何又沒有出現？</p>
 <p>相信與中國以出口作為主要經濟增長的動力有關，因此透過干預機制，控制匯率。由於人民幣並非市場自由浮動的貨幣，政府有能力調控匯率，以達至經濟目的。圖3 是美元兌人民幣匯率，顯示中國在1997年的亞洲金融風暴和2008年的國際金融風暴後均鎖定匯率不變，形成兩條有趣的橫線。雖然從2005年至2014年有呈現升值趨勢，2014年後又再次貶值。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/bb500a77-547a-496b-af53-ea39a322a1ca.png" alt="圖4 美元兌人民幣匯率，來源：Henry To (2018)">
 <p>圖4 美元兌人民幣匯率，來源：Henry To (2018)</p>
 <p>To, Henry (2018) <strong>An Annotated History of the USD/CNY Exchange Rate，</strong>https://blogs.cfainstitute.org/investor/charts/an-annotated-history-of-the-usdcny-exchange-rate/</p>
 <p>當匯率調節機制和購買力調節機制均失效，貿易差額無法收窄，貿易戰變成唯一工具，兩敗俱傷！</p>
-<p><br></p>
-<p><br></p>
