--- a/_posts/2019-05-29-VOCUS-東大嶼人工島賣地收入方案比較.html
+++ b/_posts/2019-05-29-VOCUS-東大嶼人工島賣地收入方案比較.html
@@ -10,9 +10,10 @@ author: REDBRIC
 
 <p>昨日有報導指有全國政協常委引述不具名專家估算，名為明日大嶼的東大嶼人工島填海項目可獲過萬億元的住宅賣地收入 [a]，但兩份傳媒報導均引述我較早前的估算，該項目的住宅賣地總收入只有3600億元 [b]，差別巨大，特此再詳細比較兩方案的分別，以供讀者參考。</p>
 <p>下表一詳列兩方案的資料來源及計算方式比較。</p>
+<img src="https://images.vocus.cc/2c8f506e-a363-454d-b2ef-1bd9e38c990d.png" alt="表1a 方案比較">
 <p>表1a 方案比較</p>
-<p><br></p>
-<p>表1b 方案比較 </p>
+<img src="https://images.vocus.cc/87206c15-bbba-4a21-a47b-9aee1d31beeb.png" alt="表1b 方案比較">
+<p>表1b 方案比較</p>
 <p>兩方案有幾項參數的差別導致一方案蝕，另一方案賺。首先，島上發展住宅的土地面積若由35%上升至50%，可發展住宅的土地面積由600公頃上升至850公頃，但其他空間將因此而減少，與現時一般新發展區的三成土地作住宅用途不符。</p>
 <p>第二，地積比率由5倍升至6倍，可令私樓樓面面積由9000萬平方尺升至1億5300萬平方尺，但建築密度變高，與現時新市鎮的3.5倍高出近倍 (其實我的估算已經升至5倍，已經相當高)。</p>
 <p>第三，由於住戶總數上限為40萬戶，增加發展面積令每戶平均尺數由750尺升至1275尺 (公屋相同)，戶戶變豪宅，售價倍升 (估算如下)，市民能否負擔？</p>
