--- a/_posts/2019-05-29-VOCUS-沙中線紅磡站懷疑滲水事件的技術分析.html
+++ b/_posts/2019-05-29-VOCUS-沙中線紅磡站懷疑滲水事件的技術分析.html
@@ -10,8 +10,8 @@ author: REDBRIC
 
 <p>報章報導沙中線紅磡站有嚴重滲水事件[1]，但港鐵和路政署都不作回應，令公眾對車站工程的質量水平產生懷疑。然而，工程界專業人士一般都理解地下工程由於地下水壓問題，大多需要特別處理防水，有些情況更加是難以達至零滲水，而只可以採取疏水處理。因此，港鐵和政府有責任向公眾說明今次懷疑滲水事件，是否符合工程指定規格，抑或屬於違規或不達標工程，以釋公眾疑慮。</p>
 <p>譬如台北捷運地下車站也有滲水情況，台北市政府捷運工程局土木建築設計處課長 黃怡超和台北市政府捷運工程局路權室副工程司趙志堅總結了台北捷運的地下車站結構防水工程的技術。其中解釋滲水原因是由於『地下車站結構物也常年承受著高地下水壓之作用，一旦地下結構體之水路產生後，此高水壓產生的滲透力量將加速滲流水進入結構體，並於混凝土表面產生白華，是地下結構物滲漏(Leakage)最主要的成因。』[1] </p>
-<p>圖1 顯示地下結構的防水工程效果與(1)地下環境，(2)採用單牆、複合牆或雙牆結構，(3)以正水壓面或負水壓面防水方式，(4)防水物料和(5)手工有關。有些因素是人力所不能改變，亦有一些是與設計和採購有關，並不一定是承建商的責任，政府理應進行工程分析，以確定滲水成因和責任，以便根據合約執行補救，確保車站安全和質量。</p>
-<p><br></p>
+<p>圖1顯示地下結構的防水工程效果與(1)地下環境，(2)採用單牆、複合牆或雙牆結構，(3)以正水壓面或負水壓面防水方式，(4)防水物料和(5)手工有關。有些因素是人力所不能改變，亦有一些是與設計和採購有關，並不一定是承建商的責任，政府理應進行工程分析，以確定滲水成因和責任，以便根據合約執行補救，確保車站安全和質量。</p>
+<img src="https://images.vocus.cc/a075c5ea-3d6d-4763-a52d-32db7b384146.png" alt="圖1 台北捷運地下車站結構防水工程示意圖 [1]">
 <p>圖1 台北捷運地下車站結構防水工程示意圖 [1]</p>
 <p>從台北捷運的工程標準，不同的構件須要的防水規格有所不同，下圖2 顯示4類不同構件的防水要求，水密性分為4等級 A，B，C，D：</p>
 <ul>
@@ -19,18 +19,16 @@ author: REDBRIC
   <li>Ｂ級水密性者容許微量滲漏，此現象僅限於施工縫處或隧道襯砌環片接縫處之混凝土 表面有潮濕痕跡但無可見水流。 </li>
   <li>Ｃ級水密性者允許滲漏，此現象僅限於混凝土表面及水平施工縫處有潮濕斑痕，或牆 面垂直施工縫處有似小水珠滲漏，但不得有連續性滴水或噴流。』[1]</li>
 </ul>
+<img src="https://images.vocus.cc/bf9b39e3-cd0d-42e5-8895-aca9743ab4fe.png" alt="圖2 台北捷運地下結構物水密性 [1]">
 <p>圖2 台北捷運地下結構物水密性 [1]</p>
 <p>根據台北捷運的經驗，『地下結構體（側牆）發生滲漏的次數最多，其中尤以自施工縫滲漏最大宗。』[1] 而從報章報導的照片似乎有部份滲水位置也是在施工縫位置 (圖3)。</p>
-<p><br></p>
-<p><br></p>
+<img src="https://images.vocus.cc/69f61b9d-966b-47b1-ac25-225b6cf08e40.jpg">
 <p>所謂施工縫是指大片混凝土的施工，由於各種原因包括不能夠一次過完成整片混凝土，因而出現新舊混凝土的接駁面，或與土壤接觸之連續牆造成水路，則將自結構內牆施工縫產生滲漏與白華。</p>
 <p>事實上，近年的防水技術已大大提升，除了傳統的非黏結式防水膜，亦有黏結式防水膜。可惜報導沒有公布紅磡站工程的防水技術是採用那類防水物料。網上顯示紅磡站的防水工程合約分判商是Mapei China Ltd，所用的物料為 Purtop 400M HK，這種防水料的質量規格書可參考Mapei (2017) [3]： </p>
 <p>“Waterproofing for Cut & Cover tunnel (6,000 m2); concrete corrosion-inhibiting protection (Purtop 400M HK, Mapefer 1K, Mapei Advanced Injection hose)”[4]</p>
 <p>然而，這與報導的分判商名稱不一樣，希望政府盡快提供詳細資料，以便分析有關防水物料對紅磡站工程的水密能力和補救辦法。</p>
 <p>最後，報導提及到『禮頓曾向盈發發出不合格報告（non-conformance report），列出共16項問題，包括工地其中一個施工範圍的連續牆，有多達200餘『個螺絲帽消失（missing）、連續牆底部無法連接石層、以及有鋼筋紥錯等，但文件未有顯示如何補救。』[1]</p>
-<p><br></p>
 <p>[1] 蘋果日報 (2018) 紅磡站石屎浸到爛 港鐵早知狂滲水仍死撐「潮濕」，10月20日。https://hk.news.appledaily.com/local/realtime/article/20181020/58815616</p>
 <p>[2] 黃怡超，趙志堅 (2017) 臺北捷運地下車站結構防水工程，捷運技術，51，41-57。http://data.taipei/opendata/datalist/datasetMeta?oid=51d628c6-8f00-4b39-8dab-746fc29c7bac</p>
 <p>[3] Mapei (2017) Purtop Brochure - Spray-applied polyurea waterproofing membranes。http://www.mapei.com/public/HK/landingpage/595/multimedia/PURTOP_Brochure_HQ_20171216_Lres.pdf</p>
 <p>[4] Mapei (2018) MTRC Shatin to Central Link Contract 1112 Hung Hom Station and Stabling Sidings。https://www.mapei.com/it/en/products-and-solutions/lines/products-for-structural-strengthening/mtrc-shatin-to-central-link-contract-1112-hung-hom-station-and-stabling-sidings-66610 </p>
-<p><br></p>
