--- a/_posts/2019-05-29-VOCUS-沙中線紅磡站工程削鐵事件的四方論點.html
+++ b/_posts/2019-05-29-VOCUS-沙中線紅磡站工程削鐵事件的四方論點.html
@@ -17,7 +17,8 @@ author: REDBRIC
 <p>分判商證實禮頓曾向分判商要求更改連續牆設計，而分判商有根據該更改施工。</p>
 <p>港鐵代表表示</p>
 <p>『由於當時時間緊逼，港鐵誤用未經修訂、舊版本的圖則去撰寫 6 月提交予政府的報告，其實港鐵在禮頓施工前已同意設計修訂。根據港鐵在2013年3月獲屋宇署接納的原設計，紅磡站的東西線層板，本來設計是兩面螺絲頭分別安裝在連續牆的兩面，螺絲頭會和安裝在層板內的鋼筋連接，每個螺絲頭的間距為150毫米。後來工程承建商為了在連續牆中間加裝灌漿導管，於是就將設計改為以打橫的鋼筋，貫穿層板及連續牆的左右兩邊，而有關方案亦同樣在2017年獲屋宇署接納。而現時連續牆竣工的實際情況，則是先削去連續牆的頂部大約 400 至 500 毫米，再改為以兩層連續的鋼筋貫穿層板兩邊，無需使用到任何螺絲頭。』[4]</p>
-<p>圖1 顯示更改前後的連續牆切面圖</p>
+<p>圖1顯示更改前後的連續牆切面圖</p>
+<img src="https://images.vocus.cc/10670785-2a32-4ec2-841b-f5ae98079aa8.png" alt="圖1 連續牆設計更改 [4]">
 <p>圖1 連續牆設計更改 [4]</p>
 <p>聆訊中確認該連續牆設計有最少三份設計圖，第一份原設計圖則在2013年獲屋宇署批准，但第二份和第三份圖則的批准情況有很多不同的理解，甚至港鐵的法律代表的陳詞中也有點矛盾 (可能是報導問題)。因為上一段明確提到『有關方案亦同樣在2017年獲屋宇署接納』，但下一段又指『禮頓未有就最新施工方案，提交過正式施工建議書。』似乎顯示所謂已獲屋宇署接納的更改只是第二份設計，而非第三份設計。而由於港鐵認為第三份設計的更改不涉及結構安全和完整性，因此根據ADM-19的APP G規定，可豁免預先批准的要求。而港鐵在2018年6月撰寫報告時所用的圖則仍是第二份圖則，並承認是出錯，陳詞如下：</p>
 <p>『由於月台層板工程至今未竣工，港鐵亦不認為改動涉及東西線層板的結構安全和完整性，因此禮頓未有就最新施工方案，提交過正式施工建議書。但他強調，最新無需使用螺絲頭的施工方案，實為更接近本來在2013年已獲屋宇署批准圖則的施工原意。他強調，港鐵在今年6月撰寫報告時忘記了這個改動，在報告中出錯，是非常不幸的事情（unfortunate），但港鐵無誤導或欺詐任何人的意圖。』[4]</p>
@@ -27,7 +28,6 @@ author: REDBRIC
 <p>如果我的理解正確，該永久改動部份是從未獲得屋宇署批准的，那麼最後要確定的是究竟這永久改動部份是否ADM-19 APP G 豁免預先申請批准的工程。政府的法律代表提出，由於連續牆屬地基工程，不屬豁免工程：</p>
 <p>『在一份內部指引中，港鐵的確就某些工程的改動可豁免向屋宇署申請，包括上層建築（superstructure）。惟許說月台層板和連續牆都屬地基工程，任何改動都要在施工前取得屋宇署批准。』[5]</p>
 <p>雖然聆訊沒有提到該份內部指引是否與ADM-19 APP G 相同，但上面提及的內容與作業備考的內容相同。換言之，政府認為港鐵實質上未有獲得屋宇署就第三份圖則中永久改動部份的改動批准，而有關的改動屬不能豁免的地基工程，反駁了港鐵代表所指工程更改不涉及結構安全，可以豁免預先批准的講法！</p>
-<p><br></p>
 <p>[1] 姚松炎 (2018) 沙中線工程懷疑虛假文書事件引發工程師憂慮刑事責任，8月24日。https://sosreader.com/n/@ecyY/5b7fa9f3fd897800015dcc85</p>
 <p>[2] 立場新聞 (2018) <strong>禮頓指剪鋼筋指控無證據　質疑中科潘焯鴻為報復非可靠證人，10月22日。https://thestandnews.com/society/%E6%B2%99%E4%B8%AD%E7%B6%AB%E7%A0%94%E8%A8%8A-%E7%A6%AE%E9%A0%93%E6%8C%87%E5%89%AA%E9%8B%BC%E7%AD%8B%E6%8C%87%E6%8E%A7%E7%84%A1%E8%AD%89%E6%93%9A-%E8%B3%AA%E7%96%91%E4%B8%AD%E7%A7%91%E6%BD%98%E7%84%AF%E9%B4%BB%E7%82%BA%E5%A0%B1%E5%BE%A9%E9%9D%9E%E5%8F%AF%E9%9D%A0%E8%AD%89%E4%BA%BA/?fbclid=IwAR1MbNBB7n21CGXYWC4f_m43gVZQAqHldypFBi905ACtRXeIY6cXY9YMrd8</strong></p>
 <p>[3] 蘋果日報 (2018) 公開聆訊今展開 分判商爆禮頓要求降低石屎連續牆高度，10月22日。https://hk.news.appledaily.com/local/realtime/article/20181022/58821260?fbclid=IwAR3wSyySGeMvjHa4CgQBq6X4ycr76BVRczJBv94CsQUehO3zvZKmLaiEOTE</p>
