--- a/_posts/2022-04-24-PQ-台獨聯盟舉辦彭明敏追思會-陳南天-記憶歷史化作今後的力量.html
+++ b/_posts/2022-04-24-PQ-台獨聯盟舉辦彭明敏追思會-陳南天-記憶歷史化作今後的力量.html
@@ -200,7 +200,7 @@ author: 林志鴻
 
 
 
-<p class="pqnote">政治作為一種志業，而不是一種事業。彭明敏教授遺留給台灣文明的寶貴資產，不只是政治智慧，更有「富貴不能淫、威武不能屈」的政治人格。<br><br>王興煥最後總結，對彭明敏教授最深刻的追思，就是一代接一代，以功成不必在我的誠意，凝聚「台灣是台灣人的台灣」的國族共識，堅持「中華民國大政奉還台灣共同體」，促成台灣獨立建國的實現。生命是向死而存有。彭明敏教授善盡了他的時代責任，「哲人日已遠，典型在夙習」，請彭教授在天上看照著，台灣新共和的開創，一定會在我們這一代完成。</p>
+<p class="pqnote">政治作為一種志業，而不是一種事業。彭明敏教授遺留給台灣文明的寶貴資產，不只是政治智慧，更有「富貴不能淫、威武不能屈」的政治人格。<br><br>王興煥最後總結，對彭明敏教授最深刻的追思，就是一代接一代，以功成不必在我的誠意，凝聚「台灣是台灣人的台灣」的國族共識，堅持「中華民國大政奉還台灣共同體」，促成台灣獨立建國的實現。生命是向死而存有。彭明敏教授善盡了他的時代責任，「哲人日已遠，典型在夙昔」，請彭教授在天上看照著，台灣新共和的開創，一定會在我們這一代完成。</p>
 
 
 
@@ -212,7 +212,7 @@ author: 林志鴻
 
 
 
-<blockquote class="wp-block-quote"><p>【邀請】彭明敏追思會<br>2022.04.24（日）14:00<br>台獨聯盟辦公室│台北市青島西路11號14樓之一</p><p>國民黨二戰後在台灣的極權統治，透過軍警特全面箝制台灣人的自由，並昧於現實想要代表一個中國。1964 年，彭明敏（1923-2022）和謝聰敏（1934-2019）、魏廷朝（1935-1999）共同撰寫「台灣人自救宣言」，這些不畏權勢的台灣獨立建國先行者，表達了對於民主人權普世價值的追求，並說出「一個台灣、一個中國」的國際現實與趨勢。結果，彭明敏被判 8 年有期徒刑、謝聰敏 10 年、魏廷朝 8 年。</p><p>雖經國際友人與海外台灣人奔走救援，魏廷朝和謝聰敏被關押至 1970 年出獄，彭明敏則自 1965 年出獄後即被軟禁，國民黨更派人隨時監控彭明敏的一舉一動。1970 年經由海外友人以及日人台獨聯盟盟員宗像隆幸的援助，成功出逃台灣，鼓舞了海外台灣人。同年一月，世界性的獨立建國聯盟成立，亦發生了 424 刺蔣案。</p><p>彭明敏於 1972-1973 年接任台灣獨立建國聯盟主席，和許多台灣人繼續在海外倡議台灣獨立、關注台灣人權問題。海外流亡多年後，直到 1992 年黑名單解禁，才回到台灣。1996 年彭明敏代表民進黨參選台灣歷史性的第一次總統直選，並與代表國民黨的李登輝共同競選，讓台灣本土與民主意識再次擴大。</p><p>彭明敏作為台灣獨立建國的先行者，於 2022 年 4 月 8 日辭世，台獨聯盟邀請他過去的同志、好友、政治學家、歷史學家、政治工作者等，有張燦鍙、魏瑞明、李筱峰、陳儀深、吳叡人、王興煥一起共同追思彭明敏。並邀請盟員、盟友一起參與。</p><cite>台灣獨立建國聯盟主席　陳南天敬上　2022.04.20</cite></blockquote>
+<blockquote class="wp-block-quote"><p>【邀請】彭明敏追思會<br>2022.04.24（日）14:00<br>台獨聯盟辦公室│台北市青島西路 11 號 14 樓之一</p><p>國民黨二戰後在台灣的極權統治，透過軍警特全面箝制台灣人的自由，並昧於現實想要代表一個中國。1964 年，彭明敏（1923 &#8211; 2022）和謝聰敏（1934 &#8211; 2019）、魏廷朝（1935 &#8211; 1999）共同撰寫「台灣人自救宣言」，這些不畏權勢的台灣獨立建國先行者，表達了對於民主人權普世價值的追求，並說出「一個台灣、一個中國」的國際現實與趨勢。結果，彭明敏被判 8 年有期徒刑、謝聰敏 10 年、魏廷朝 8 年。</p><p>雖經國際友人與海外台灣人奔走救援，魏廷朝和謝聰敏被關押至 1970 年出獄，彭明敏則自 1965 年出獄後即被軟禁，國民黨更派人隨時監控彭明敏的一舉一動。1970 年經由海外友人以及日人台獨聯盟盟員宗像隆幸的援助，成功出逃台灣，鼓舞了海外台灣人。同年一月，世界性的獨立建國聯盟成立，亦發生了 424 刺蔣案。</p><p>彭明敏於 1972-1973 年接任台灣獨立建國聯盟主席，和許多台灣人繼續在海外倡議台灣獨立、關注台灣人權問題。海外流亡多年後，直到 1992 年黑名單解禁，才回到台灣。1996 年彭明敏代表民進黨參選台灣歷史性的第一次總統直選，並與代表國民黨的李登輝共同競選，讓台灣本土與民主意識再次擴大。</p><p>彭明敏作為台灣獨立建國的先行者，於 2022 年 4 月 8 日辭世，台獨聯盟邀請他過去的同志、好友、政治學家、歷史學家、政治工作者等，有張燦鍙、魏瑞明、李筱峰、陳儀深、吳叡人、王興煥一起共同追思彭明敏。並邀請盟員、盟友一起參與。</p><cite>台灣獨立建國聯盟主席　陳南天敬上　2022.04.20</cite></blockquote>
 
 
 
