--- a/_posts/2022-04-25-PQ-華視一周三度烏龍報導-經民連-華視應納入國安管制.html
+++ b/_posts/2022-04-25-PQ-華視一周三度烏龍報導-經民連-華視應納入國安管制.html
@@ -20,7 +20,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/e9f1fc70-華視將行政院長蘇貞昌頭銜誤植成「總統蘇貞昌」。圖／聯合報。.jpg" alt="" class="wp-image-99184" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/e9f1fc70-華視將行政院長蘇貞昌頭銜誤植成「總統蘇貞昌」。圖／聯合報。.jpg 750w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/e9f1fc70-華視將行政院長蘇貞昌頭銜誤植成「總統蘇貞昌」。圖／聯合報。-300x213.jpg 300w" sizes="(max-width: 750px) 100vw, 750px" /><figcaption>華視將行政院長蘇貞昌頭銜誤植成「總統蘇貞昌」。圖／聯合報。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/e9f1fc70-華視將行政院長蘇貞昌頭銜誤植成「總統蘇貞昌」。圖／聯合報。.jpg" alt="" class="wp-image-99184" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/e9f1fc70-華視將行政院長蘇貞昌頭銜誤植成「總統蘇貞昌」。圖／聯合報。.jpg 750w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/e9f1fc70-華視將行政院長蘇貞昌頭銜誤植成「總統蘇貞昌」。圖／聯合報。-300x213.jpg 300w" sizes="(max-width: 750px) 100vw, 750px" /><figcaption>華視將行政院長蘇貞昌頭銜誤植成「總統蘇貞昌」。圖／聯合報。</figcaption></figure></div>
 
 
 
